# copilot-skills

./: .gitignore  AGENTS.md  README.md  SKILL-OVERLAP-REPORT.md
.github/: copilot-instructions.md
.github/agents/: architect.agent.md  debugger.agent.md  reviewer.agent.md  software-engineer.agent.md
.github/instructions/: code-review.instructions.md  documentation.instructions.md  performance.instructions.md  python.instructions.md  security.instructions.md  testing.instructions.md
.github/skills/academic-plotting/: SKILL.md
.github/skills/acquire-codebase-knowledge/: SKILL.md
.github/skills/attach-db/: SKILL.md
.github/skills/audit-ml-pipeline/: SKILL.md
.github/skills/brag-sheet/: SKILL.md
.github/skills/brainstorming/: SKILL.md
.github/skills/brainstorming-research-ideas/: SKILL.md
.github/skills/build-ml-pipeline/: SKILL.md
.github/skills/code-quality/: SKILL.md
.github/skills/code-review/: SKILL.md
.github/skills/codebase-design/: SKILL.md
.github/skills/create-architectural-decision-record/: SKILL.md
.github/skills/create-implementation-plan/: SKILL.md
.github/skills/create-specification/: SKILL.md
.github/skills/data-access/: SKILL.md
.github/skills/data-science-python-stack/: SKILL.md
.github/skills/deslop/: SKILL.md
.github/skills/deslop.deprecated/: SKILL.md
.github/skills/docs/: SKILL.md
.github/skills/documentation-writer/: SKILL.md
.github/skills/ml-scaffold/templates/: pyproject.toml  src_features.py  summary.md
.opencode/: opencode.json
docs/: architecture.md  catalog.md  install.md  maintain.md  use.md
(+300 files in other folders)
