# Minimal `pyproject.toml` for an ML experimentation workspace.
#
# Purpose: declare the local `src/<pkg>/` as an installable, editable
# Python package so `from <pkg>.X import Y` works from any CWD without
# `PYTHONPATH=src` hacks. Runtime dependencies stay in the env
# manager's manifest (pixi.toml / poetry / uv / hatch / conda) — this
# file only describes the package, not its dependencies.
#
# Replace `<pkg>` with the actual package name (kebab-case for
# `project.name`, snake_case for the `src/<pkg>/` directory).
#
# After this file is on disk, `python-env-manager` § "Editable
# workspace package" wires the editable install for the project's
# manager (pixi: `pixi add --pypi --editable .`; uv: `uv sync` is
# enough; poetry/hatch: declarative; pip+venv: `pip install -e .`).

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "<pkg>"
version = "0.1.0"
description = "Workspace package for the <pkg> ML experiments."
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]
